--- a/src/resources/scss/input.scss
+++ b/src/resources/scss/input.scss
@@ -13,3 +13,19 @@ h1 {
 h3 {
     color: blue;
 }
+.card-courses{
+    margin-top: 16px;
+}
+.ml-auto{
+    margin-left: auto;
+}
+.user-avatar{
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    margin-right: 4px;
+}
+img.stored-img{
+    width: 94px;
+    height: 60px;
+}
